--- a/index.html
+++ b/index.html
@@ -4,35 +4,85 @@
         <meta name=viewport content="width=device-width, initial-scale=1"/>
         <meta name="distribution" content="web"/>
         <meta name="description" content="CAT 125 Image Carousel"/>
-
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel='stylesheet prefetch' href='styles/stylesheet.css'>
     </head>
     <body>
+        <header>
+        </header>
+        <main>
         <div class="container">
-          <div class="carousel">
-            <div class="item a">1</div>
-            <div class="item b">2</div>
-            <div class="item c">3</div>
-            <div class="item d">4</div>
-            <div class="item e">5</div>
-            <div class="item f">6</div>
-            <div class="item g">7</div>
-            <div class="item h">8</div>
-            <div class="item i">9</div>
-            <div class="item j">10</div>
-            <div class="item k">11</div>
-            <div class="item l">12</div>
-            <div class="item m">13</div>
-            <div class="item n">14</div>
-            <div class="item o">15</div>
-            <div class="item p">16</div>
-          </div>
+            <div class="carousel">
+                <div class="item a">
+                    <img class="story" src="./res/1.jpg">
+                    <p>It was a pretty frustrating day of coding for Kenny Wibowo.</p>
+                </div>
+                <div class="item b">
+                    <img class="story" src="./res/2.jpg">
+                    <p>Kenny was at a loss trying to code Connect Four.</p>
+                </div>
+                <div class="item c">
+                    <img class="story" src="./res/3.jpg">
+                    <p>You see, the tiles are supposed to gravitate all the way down...</p>
+                </div>
+                <div class="item d">
+                    <img class="story" src="./res/4.jpg">
+                    <p>... But instead they take their time, going one row per turn.</p>
+                </div>
+                <div class="item e">
+                    <img class="story" src="./res/5.jpg">
+                    <p>Looking for a solution, Kenny stared for so long that the lines started to blur.</p>
+                </div>
+                <div class="item f">
+                    <img class="story" src="./res/6.jpg">
+                    <p>Kenny was just about ready to punch my screen.</p>
+                </div>
+                <div class="item g">
+                    <img class="story" src="./res/7.jpg">
+                    <p>On the brink of defeat, Kenny turned to...</p>
+                </div>
+                <div class="item h">
+                    <img class="story" src="./res/8.jpg">
+                    <p>... His trusty robot, who was silent and not trusty at all.</p>
+                </div>
+                <div class="item i">
+                    <img class="story" src="./res/9.jpg">
+                    <p>"What did I expect," he thought, "he never changes."</p>
+                </div>
+                <div class="item j">
+                    <img class="story" src="./res/10.jpg">
+                    <p>"... No change? Wait, that's it! I forgot an important rule of programming..."</p>
+                </div>
+                <div class="item k">
+                    <img class="story" src="./res/11.jpg">
+                    <p>It's not a bug, it's a feature!</p>
+                </div>
+                <div class="item l">
+                    <img class="story" src="./res/12.jpg">
+                    <p>Kenny changed the name from Connect Four to Connect Fall...</p>
+                </div>
+                <div class="item m">
+                    <img class="story" src="./res/13.jpg">
+                    <p>And called it a day! The cycle continues...</p>
+                </div>
+                <div class="n">
+                    <div class="game" ng-app="connectFall">
+                        <h1>Connect Fall</h1>
+                        <p>Try out the game here!</p>
+                        <connect-fall></connect-fall>
+                        <h3>Source located <a href="https://github.com/KennyWibowo/ConnectFall">here.</a></h3>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="next">Next</div>
         <div class="prev">Prev</div>
+        </main>
+        <footer>
+        </footer>
     </body>
-
     <script src='js/jquery-3.1.1.min.js'></script>
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="https://cdn.rawgit.com/KennyWibowo/ConnectFall/0.1.2/release/ConnectFall.0.1.2.js"></script>
 </html>
