--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <title>Kenny Wibowo - CAT 125 Image Carousel</title>
+
         <meta name="theme-color" content="#64b1fc"/>
         <meta name=viewport content="width=device-width, initial-scale=1"/>
         <meta name="distribution" content="web"/>
