--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="item f">
                     <img class="story" src="./res/6.jpg">
-                    <p>Kenny was just about ready to punch my screen.</p>
+                    <p>Kenny was just about ready to punch his screen.</p>
                 </div>
                 <div class="item g">
                     <img class="story" src="./res/7.jpg">
