Fix blurry text!

--- a/index.html
+++ b/index.html
@@ -17,62 +17,62 @@
             <div class="carousel">
                 <div class="item a">
                     <img class="story" src="./res/1.jpg">
-                    <p>It was a pretty frustrating day of coding for Kenny Wibowo.</p>
+                    <p class="item-text">It was a pretty frustrating day of coding for Kenny Wibowo.</p>
                 </div>
                 <div class="item b">
                     <img class="story" src="./res/2.jpg">
-                    <p>Kenny was at a loss trying to code Connect Four.</p>
+                    <p class="item-text">Kenny was at a loss trying to code Connect Four.</p>
                 </div>
                 <div class="item c">
                     <img class="story" src="./res/3.jpg">
-                    <p>You see, the tiles are supposed to gravitate all the way down...</p>
+                    <p class="item-text">You see, the tiles are supposed to gravitate all the way down...</p>
                 </div>
                 <div class="item d">
                     <img class="story" src="./res/4.jpg">
-                    <p>... But instead they take their time, going one row per turn.</p>
+                    <p class="item-text">... But instead they take their time, going one row per turn.</p>
                 </div>
                 <div class="item e">
                     <img class="story" src="./res/5.jpg">
-                    <p>Looking for a solution, Kenny stared for so long that the lines started to blur.</p>
+                    <p class="item-text">Looking for a solution, Kenny stared for so long that the lines started to blur.</p>
                 </div>
                 <div class="item f">
                     <img class="story" src="./res/6.jpg">
-                    <p>Kenny was just about ready to punch his screen.</p>
+                    <p class="item-text">Kenny was just about ready to punch his screen.</p>
                 </div>
                 <div class="item g">
                     <img class="story" src="./res/7.jpg">
-                    <p>On the brink of defeat, Kenny turned to...</p>
+                    <p class="item-text">On the brink of defeat, Kenny turned to...</p>
                 </div>
                 <div class="item h">
                     <img class="story" src="./res/8.jpg">
-                    <p>... His trusty robot, who was silent and not trusty at all.</p>
+                    <p class="item-text">... His trusty robot, who was silent and not trusty at all.</p>
                 </div>
                 <div class="item i">
                     <img class="story" src="./res/9.jpg">
-                    <p>"What did I expect," he thought, "he never changes."</p>
+                    <p class="item-text">"What did I expect," he thought, "he never changes."</p>
                 </div>
                 <div class="item j">
                     <img class="story" src="./res/10.jpg">
-                    <p>"... No change? Wait, that's it! I forgot an important rule of programming..."</p>
+                    <p class="item-text">"... No change? Wait, that's it! I forgot an important rule of programming..."</p>
                 </div>
                 <div class="item k">
                     <img class="story" src="./res/11.jpg">
-                    <p>It's not a bug, it's a feature!</p>
+                    <p class="item-text">It's not a bug, it's a feature!</p>
                 </div>
                 <div class="item l">
                     <img class="story" src="./res/12.jpg">
-                    <p>Kenny changed the name from Connect Four to Connect Fall...</p>
+                    <p class="item-text">Kenny changed the name from Connect Four to Connect Fall...</p>
                 </div>
                 <div class="item m">
                     <img class="story" src="./res/13.jpg">
-                    <p>And called it a day! The cycle continues...</p>
+                    <p class="item-text">And called it a day! The cycle continues...</p>
                 </div>
-                <div class="n">
+                <div class="item n">
                     <div class="game" ng-app="connectFall">
-                        <h1>Connect Fall</h1>
-                        <p>Try out the game here!</p>
+                        <h1 class="game-h1">Connect Fall</h1>
+                        <p class="game-p">Try out the game here!</p>
                         <connect-fall></connect-fall>
-                        <h3>Source located <a href="https://github.com/KennyWibowo/ConnectFall">here.</a></h3>
+                        <h3 class="game-h3">Source located <a href="https://github.com/KennyWibowo/ConnectFall">here.</a></h3>
                     </div>
                 </div>
             </div>
