Added end credit

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
                         <h3 class="game-h3">Source located <a href="https://github.com/KennyWibowo/ConnectFall">here.</a></h3>
                     </div>
                 </div>
+                <div class="item o">
+                    <div class="end-credits">
+                        <p class="item-text">Thanks for viewing my image storyboard carousel!</p>
+                        <p class="item-text"> - <a href="https://wibow.io">Kenny Wibowo</a></p>
+                        <p>A Project For Nericcio's CAT 125, Section A06</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="next">Next</div>
