Added bootstrap for scaling

--- a/index.html
+++ b/index.html
@@ -7,64 +7,75 @@
         <meta name="distribution" content="web"/>
         <meta name="description" content="CAT 125 Image Carousel"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel='stylesheet prefetch' href='styles/stylesheet.css'>
+        
+        <script src='js/jquery-3.1.1.min.js'></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+        <script src="https://cdn.rawgit.com/KennyWibowo/ConnectFall/0.1.2/release/ConnectFall.0.1.2.js"></script>
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+        <link rel='stylesheet' href='styles/stylesheet.css'>
     </head>
     <body>
         <header>
         </header>
         <main>
-        <div class="container">
+        <div class="carousel-container">
             <div class="carousel">
                 <div class="item a">
-                    <img class="story" src="./res/1.jpg">
+                    <img class="story img-responsive" src="./res/1.jpg">
                     <p class="item-text">It was a pretty frustrating day of coding for Kenny Wibowo.</p>
                 </div>
                 <div class="item b">
-                    <img class="story" src="./res/2.jpg">
+                    <img class="story img-responsive" src="./res/2.jpg">
                     <p class="item-text">Kenny was at a loss trying to code Connect Four.</p>
                 </div>
                 <div class="item c">
-                    <img class="story" src="./res/3.jpg">
+                    <img class="story img-responsive" src="./res/3.jpg">
                     <p class="item-text">You see, the tiles are supposed to gravitate all the way down...</p>
                 </div>
                 <div class="item d">
-                    <img class="story" src="./res/4.jpg">
+                    <img class="story img-responsive" src="./res/4.jpg">
                     <p class="item-text">... But instead they take their time, going one row per turn.</p>
                 </div>
                 <div class="item e">
-                    <img class="story" src="./res/5.jpg">
+                    <img class="story img-responsive" src="./res/5.jpg">
                     <p class="item-text">Looking for a solution, Kenny stared for so long that the lines started to blur.</p>
                 </div>
                 <div class="item f">
-                    <img class="story" src="./res/6.jpg">
+                    <img class="story img-responsive" src="./res/6.jpg">
                     <p class="item-text">Kenny was just about ready to punch his screen.</p>
                 </div>
                 <div class="item g">
-                    <img class="story" src="./res/7.jpg">
+                    <img class="story img-responsive" src="./res/7.jpg">
                     <p class="item-text">On the brink of defeat, Kenny turned to...</p>
                 </div>
                 <div class="item h">
-                    <img class="story" src="./res/8.jpg">
+                    <img class="story img-responsive" src="./res/8.jpg">
                     <p class="item-text">... His trusty robot, who was silent and not trusty at all.</p>
                 </div>
                 <div class="item i">
-                    <img class="story" src="./res/9.jpg">
+                    <img class="story img-responsive" src="./res/9.jpg">
                     <p class="item-text">"What did I expect," he thought, "he never changes."</p>
                 </div>
                 <div class="item j">
-                    <img class="story" src="./res/10.jpg">
+                    <img class="story img-responsive" src="./res/10.jpg">
                     <p class="item-text">"... No change? Wait, that's it! I forgot an important rule of programming..."</p>
                 </div>
                 <div class="item k">
-                    <img class="story" src="./res/11.jpg">
+                    <img class="story img-responsive" src="./res/11.jpg">
                     <p class="item-text">It's not a bug, it's a feature!</p>
                 </div>
                 <div class="item l">
-                    <img class="story" src="./res/12.jpg">
+                    <img class="story img-responsive" src="./res/12.jpg">
                     <p class="item-text">Kenny changed the name from Connect Four to Connect Fall...</p>
                 </div>
                 <div class="item m">
-                    <img class="story" src="./res/13.jpg">
+                    <img class="story img-responsive" src="./res/13.jpg">
                     <p class="item-text">And called it a day! The cycle continues...</p>
                 </div>
                 <div class="item n">
@@ -77,8 +88,8 @@
                 </div>
                 <div class="item o">
                     <div class="end-credits">
-                        <p class="item-text">Thanks for viewing my image storyboard carousel!</p>
-                        <p class="item-text"> - <a href="https://wibow.io">Kenny Wibowo</a></p>
+                        <p class="item-text end-credit-text">Thanks for viewing my image storyboard carousel!</p>
+                        <p class="item-text end-credit-name"> - <a href="https://wibow.io">Kenny Wibowo</a></p>
                         <p>A Project For Nericcio's CAT 125, Section A06</p>
                     </div>
                 </div>
@@ -89,9 +100,6 @@
         </main>
         <footer>
         </footer>
-    </body>
-    <script src='js/jquery-3.1.1.min.js'></script>
     <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-    <script src="https://cdn.rawgit.com/KennyWibowo/ConnectFall/0.1.2/release/ConnectFall.0.1.2.js"></script>
+    </body>
 </html>
